--- a/config/right_ros2_controller.yaml
+++ b/config/right_ros2_controller.yaml
@@ -4,7 +4,7 @@ controller_manager:
     
 right_joint_trajectory_controller:
   ros__parameters:
-    type: position_controllers/JointGroupPositionController 
+    type: joint_trajectory_controller/JointTrajectoryController 
 
     joints:
       - right_waist
@@ -18,6 +18,7 @@ right_joint_trajectory_controller:
 
     command_interfaces:
       - position
+      - velocity
     state_interfaces:
       - position
       - velocity
